--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,10 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -30,6 +30,6 @@ repositories {
 }
 
 dependencies {
-    compile "com.facebook.react:react-native:0.16.+"
+    compile 'com.facebook.react:react-native:+'
     compile 'jp.wasabeef:blurry:1.0.4'
 }
